# dashboards

./: .gitignore  README.md  header-template.tex  launch.py  resume-template.tex  resume.py  setup.cfg  setup.py  tracker.p
dashboards/: __init__.py  config.py  models.py
dashboards/appTracker/applications/: forms.py  routes.py
dashboards/appTracker/events/: routes.py  utils.py
dashboards/appTracker/filters/: filters.py
dashboards/appTracker/trackers/: forms.py  routes.py
dashboards/assets/scss/: main.scss
dashboards/main/: routes.py
dashboards/manageAcct/: routes.py
dashboards/scss/: variables.scss
dashboards/static/: bootstrap.css  main.css
dashboards/templates/: homepage.html  layout.html
dashboards/templates/appTracker/: application.html  edit_application.html  edit_notes.html  new_application.html  new_event.html  tracker.html  trackers.html
dashboards/templates/errors/: 403.html  404.html
dashboards/templates/manageAcct/: login.html
migrations/versions/: 516693809ede_.py  f46d13f88c7c_added_application_specific_notes.py
resumes/: coverletter-template.tex  debug.py  render.py  resume-template.tex  resume.py
scripts/: add_user.py  create_test_database.py
src/flaskserver/: flaskserver.py
src/flaskserver/templates/: demo.html  error.html  (+3 more)
src/tracker/: __init__.py  application.py  config.py  event.py  filters.py  forms.py  launch.py  main.py  models.py  routes.py  site.db  tracker-test.db  tracker.py
tests/: test_application.py  test_main.py
tests/tests_tracker/: test_application.py  test_event.py  test_main.py  test_tracker.py
(+22 files in other folders)
