[metadata]
name = tracker
description = used to track various applications
author = Connor McCarthy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
tracker = py.typed

[flake8]
max-line-length = 88

[tool:pytest]
testpaths = tests
console_output_style = count
