[metadata]
name = Dashboards
description = A variety of dashboards created with Python and Flask, intended to be hosted on a subdomain.
author = Connor McCarthy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
python_requires = >=3.10
zip_safe = no

[flake8]
max-line-length = 88
